Fixed offcenter text

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -25,6 +25,7 @@ header{
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
+  margin-left: -9vmin; /* Fix offcenter text */
 }
 #logo:hover{
   cursor: default;
